[tool.poetry]
name = "cra-doc-scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
certifi = "^2024.8.30"
pip-system-certs = "^4.0"
agno = "^1.5.0"
pypdf = "^5.5.0"
sqlalchemy = "^2.0.41"
psycopg = {extras = ["binary"], version = "^3.2.9"}
pgvector = "^0.4.1"
openai = "^1.78.1"
python-dotenv = "^1.1.0"
google-genai = "^1.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
